yamls/2-GNSS/0-secrets.yml
# Deploys a new Namespace for the MinIO Pod
apiVersion: v1
kind: Namespace
metadata:
  name: galileo
  labels:
    name: galileo
