yamls/2-GNSS/2-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egnns-galileo-ingress
  namespace: galileo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/client-max-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
  - host: galileo-buildspace.euinno.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: galileo
            port:
              number: 30180
